...
                                                    <nil key="highlightedColor"/>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cityLabel"/>
                                                    </userDefinedRuntimeAttributes>
                                                </label>
...
                                                    </constraints>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="weatherIcon"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
...
                                <rect key="frame" x="177.5" y="323.5" width="20" height="20"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="loadingIndicator"/>
                                </userDefinedRuntimeAttributes>
                            </activityIndicatorView>
...
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="infoLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
...
                    </view>
                    <navigationItem key="navigationItem" id="MrN-61-p4Q">
                        <barButtonItem key="rightBarButtonItem" title="Ekle" id="8fn-b8-JiH">
                            <connections>
                                <action selector="addNewCity:" destination="BYZ-38-t0r" id="m5g-Hj-ki1"/>
...
                                                <nil key="highlightedColor"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="dayLabel"/>
                                                </userDefinedRuntimeAttributes>
                                            </label>
...
                                                <nil key="highlightedColor"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="degreeLabel"/>
                                                </userDefinedRuntimeAttributes>
                                            </label>
...
                                                                    <nil key="highlightedColor"/>
                                                                    <userDefinedRuntimeAttributes>
                                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cellDayLabel"/>
                                                                    </userDefinedRuntimeAttributes>
                                                                </label>
...
                                                                    <nil key="highlightedColor"/>
                                                                    <userDefinedRuntimeAttributes>
                                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cellMaxDegree"/>
                                                                    </userDefinedRuntimeAttributes>
                                                                </label>
...
